Add functions to filter REF data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,9 @@ export(EM)
 export(cluster_outputs_by_journals)
 export(download_REF)
 export(download_submissions)
+export(get_top_journals)
 export(tidy_outputs)
+export(tidy_results)
 import(dplyr)
 importFrom(R6,R6Class)
 importFrom(dplyr,"%>%")
