--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(tidy_results)
 import(dplyr)
 importFrom(R6,R6Class)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,case_when)
 importFrom(dplyr,filter)
 importFrom(dplyr,first)
 importFrom(dplyr,group_by)
